# fastapi-multi-module-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.yml  conftest.py  container.py
src/applications/cli/: main.py
src/applications/web/: main.py
src/applications/web/api/v1/: router.py
src/applications/web/api/v1/users/: api.py  schemas.py
src/applications/web/middlewares/: async_session_middleware.py
src/domains/: container.py
src/domains/users/: container.py  user.py  user_creator.py  user_reader.py  user_service.py
src/domains/users/tests/: test_user_service.py
src/infra/: container.py
src/infra/rdb/: container.py  engine.py
src/infra/rdb/base/: base_entity.py  base_repository.py
src/infra/rdb/users/: container.py  user_entity.py  user_repository.py
src/systems/: container.py
src/systems/notification_push_api/: client.py
