[tool.poetry]
name = "fastapi-multi-module-project"
version = "0.1.0"
description = "Python multimodule project template."
authors = ["Juneseok Byun <byunjuneseok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
dependency-injector = "^4.41.0"
pydantic = "^2.4.2"
typer = "^0.9.0"
sqlalchemy = "^2.0.21"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiomysql = "^0.2.0"
greenlet = "^3.0.0"
boto3 = "^1.28.62"
pytest-asyncio = "^0.21.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic"]

[tool.black]
line-length = 120
target-version = ["py311"]
force-exclude = "alembic"

[tool.isort]
src_paths = ["src"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
float_to_top = true
line_length = 120
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
